harness/fixtures/enforce-arrow-function/good/iife.ts
(() => {
  console.log("iife");
})();

(async () => {
  console.log("async iife");
})();
