harness/fixtures/enforce-arrow-function/bad/generic.ts
function quux<T>(x: T): T {
  return x;
}
